@@ -154,6 +154,9 @@
 <hr>
 <h2>Alphabetical Index</h2>
 <p>
+		<a href="#about-abs">abs (number)</a><br>
+		
+	
 		<a href="#about-activatemenuitem">use menu item(menu item handle)</a><br>
 		
 	
@@ -1012,6 +1015,9 @@
 		<a href="#about-mainmenu">main menu</a><br>
 		
 	
+		<a href="#about-mapcure">map cure (attack, target, attacker)</a><br>
+		
+	
 		<a href="#about-mapheight">map height</a><br>
 		
 	
@@ -1168,8 +1174,8 @@
 		<a href="#about-outsidebattle">outside battle</a><br>
 		
 	
-		<a href="#about-outsidebattlecure">outside battle cure (attack, target, attacker)</a><br>
 		
+		<a href="#about-outsidebattlecure">outside battle cure</a><br>
 	
 		
 		<a href="#about-tileconstants">overhead tile</a><br>
@@ -1798,6 +1804,9 @@
 		<a href="#about-showvalue">show value (number)</a><br>
 		
 	
+		<a href="#about-sign">sign (number)</a><br>
+		
+	
 		
 		<a href="#about-numericconstants">six</a><br>
 	
@@ -1901,6 +1910,9 @@
 		
 	
 		<a href="#about-spritelayer">sprite layer</a><br>
+		
+	
+		<a href="#about-sqrt">sqrt (number)</a><br>
 		
 	
 		<a href="#about-statusscreen">status screen (who)</a><br>
@@ -2063,6 +2075,9 @@
 		
 	
 		<a href="#about-trace">trace (string)</a><br>
+		
+	
+		<a href="#about-tracevalue">trace value (expression, ...)</a><br>
 		
 	
 		<a href="#about-trimstring">trim string (ID, start, length)</a><br>
@@ -3780,8 +3795,19 @@ end</pre>
 		<a name="about-outsidebattlecure"></a>
 		<p>
 		<tt>
-		<b><font color="yellow">outside battle cure (attack, target, attacker)</font></b><br>
-			Uses an attack on a hero outside of battle as if you had used it from an item or cast it as a spell. In spite of the name, it works for both cure spells and damage spells. The first argument, <span class="param">attack</span> is the ID number of the attack to use, or the name from your HSI file in the form atk:name. The second argument, <span class="param">target</span> is the position in the party of the hero to cure (or harm). The third optional argument, <span class="param">attacker</span> is the position in the party of the hero who is using the attack. If this argument is ommitted or set to -1, then the average stats of the active party will be used, just like when the attack is used from an item. The return value is <a href="#about-booleanconstants" class="ref">true</a> if the cure/attack succeeded, and <a href="#about-booleanconstants" class="ref">false</a> if it did nothing.<br>
+		
+				<b><font color="yellow">outside battle cure</font></b><br>
+				See <a href="#about-outsidebattlecure">outside battle cure</a>
+			</tt></p>
+		<a name="about-mapcure"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">map cure (attack, target, attacker)</font></b><br>
+			Uses an attack on a hero outside of battle as if you had used it from an item or cast it as a spell. In spite of the name, it works for both cure spells and damage spells. The first argument, <span class="param">attack</span> is name of the attack from your HSI file in the form atk:name. The second argument, <span class="param">target</span> is the position in the party of the hero to cure (or harm). The third optional argument, <span class="param">attacker</span> is the position in the party of the hero who is using the attack. If this argument is ommitted or set to -1, then the average stats of the active party will be used, just like when the attack is used from an item. The return value is <a href="#about-booleanconstants" class="ref">true</a> if the cure/attack succeeded, and <a href="#about-booleanconstants" class="ref">false</a> if it did nothing.
+			<div style="background-color:#EFF;" class="note">
+<img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Note]" class="icon">The <span class="param">map cure</span> command replaces the old command <span class="param">outside battle cure</span> which had a bug which required you to use <span class="param">atk:name -- 1</span><br clear="all">
+</div>
+			<br>
 			
 			
 		</tt></p>
@@ -6827,7 +6853,7 @@ end
 		<p>
 		<tt>
 		<b><font color="yellow">seed random (new seed)</font></b><br>
-			Reseeds the random number generator. If called with no argument, this will reseed the random number generator to a new random sequence. If you pass in a number, the random number generator will be seeded with that number, allowing for repeatable random sequences.<br>
+			Reseeds the random number generator. If called with no argument, this will reseed the random number generator to a new random sequence. If you pass in a number (other than 0), the random number generator will be seeded with that number, allowing for repeatable random sequences.<br>
 			
 			<br>See also: <ul class="seealso"><li><a href="#about-random" class="ref">random</a></li></ul>
 		</tt></p>
@@ -8001,7 +8027,31 @@ write pass block(15,3,pass)
 		<p>
 		<tt>
 		<b><font color="yellow">number ^ power</font></b><br>
-			Raises a number to a power and returns the result. Normally you will only be raising things to a power of 2. Raising to very large powers will most certainly produce an overflow error. This can also be written as exponent(number,power)<br>
+			Raises a number to a power and returns the result. (If the result is too large and overflows no error occurs: the value is simply wrapped around a 32 bit signed integer.) This can also be written as exponent(number,power)<br>
+			
+			
+		</tt></p>
+		<a name="about-abs"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">abs (number)</font></b><br>
+			Returns the absolute value of a value. That is, negative values are made positive and others are unchanged: abs(-14) is 14, and abs(14) is 14.<br>
+			
+			
+		</tt></p>
+		<a name="about-sign"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">sign (number)</font></b><br>
+			Returns -1 if <span class="param">number</span> is negative, 0 if it is 0, and 1 if <span class="param">number</span> is positive.<br>
+			
+			
+		</tt></p>
+		<a name="about-sqrt"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">sqrt (number)</font></b><br>
+			Returns the squareroot of a number, rounded to the nearest integer.<br>
 			
 			
 		</tt></p>
@@ -8980,12 +9030,25 @@ end</pre>
 		<p>
 		<tt>
 		<b><font color="yellow">trace (string)</font></b><br>
-			Writes string #<span class="param">string</span> to "G_DEBUG.TXT".<br>
+			Writes string #<span class="param">string</span> to "g_debug.txt", located in the same directory as the RPG file or game.exe. For debugging you will nearly always use <a href="#about-tracevalue" class="ref">trace value</a> instead, which is much easier.<br>
+			<pre>variable (i)
+i := random (1, 1000)
+$1 = "i = "
+append number (1, i) #"i = 1"
+trace (1) # writes "TRACE: i = XYZ" to g_debug.txt</pre>
+			
+		</tt></p>
+		<a name="about-tracevalue"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">trace value (expression, ...)</font></b><br>
+			Prints one or more expressions and their values to "g_debug.txt". The number of arguments to this command is variable; each is printed in original textual along with its value. You can't print strings with this command; use <a href="#about-trace" class="ref">trace</a> instead.<br>
 			<pre>variable(i)
-i:= random(1,1000)
-$1="i = "
-append number(1,i) #"i = 1"
-trace(1) # writes "TRACE: i = 1" to G_DEBUG.TXT</pre>
+i := random (1, 1000)
+trace value (i)  # writes "TRACE: i = XYZ" to g_debug.txt
+
+# This writes something like "TRACE: hero X (me) = 14, hero Y (me) = 53" to g_debug.txt
+trace value (hero X (me), hero Y (me))</pre>
 			
 		</tt></p>
 		<a name="about-savemapstate"></a>
@@ -9639,7 +9702,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 685 commands in this file, of which 54 are only references to other commands.</p>
+	<p>Stats: There are 690 commands in this file, of which 55 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
