@@ -2402,6 +2402,14 @@ SELECT CASE AS CONST id
    END IF
   NEXT
   debug "TRACE: " & result
+ CASE 467 '--map cure
+  IF bound_arg(retvals(0), 1, gen(genMaxAttack)+1, "attack ID") THEN
+   IF valid_hero_party(retvals(1)) THEN
+    IF valid_hero_party(retvals(2), -1) THEN
+     scriptret = ABS(outside_battle_cure(retvals(0) - 1, retvals(1), retvals(2), stat(), 0))
+    END IF
+   END IF
+  END IF
 
 END SELECT
 
